dropdown menu components, issue with y-overflow on pos: absolute, WIP

--- a/client/src/styling/LogoBar.scss
+++ b/client/src/styling/LogoBar.scss
@@ -22,10 +22,11 @@
     width: 35px;
     height: 35px;
     border-radius: 50%;
+    border: 2px solid transparent;
   }
   &__avatar:hover {
     cursor: pointer;
-    border: 3px solid #4183c4;
+    border: 2px solid #4183c4;
   }
 }
 .feedback-icon {
